Remove dummy login
